update to copied text and scroll info

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             id="split"
           />Split-complementary
         </label>
-        <p></p>
+        <p>Scroll to update saturation</p>
         <p>Press enter to copy CSS variable to your clipboard</p>
       </section>
       <section class="examples">
