remove console log

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </label>
         <p>Scroll to update saturation</p>
         <p>Press enter to copy CSS variable to your clipboard</p>
+        <p>Press space to freeze / unfreeze colours.</p>
       </section>
       <section class="examples">
         <nav class="colour--main">
