updates to colour

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           </p>
         </div>
         <div class="box colour--main">
-          <div class="box--1 colour--dark"></div>
-          <div class="box--2 colour--light"></div>
+          <div class="box--1 colour--accent"></div>
+          <div class="box--2 colour--complement"></div>
           <div class="copied">Copied!</div>
         </div>
       </section>
@@ -59,15 +59,22 @@
         <p>Press space to freeze / unfreeze colours.</p>
       </section>
       <section class="examples">
-        <nav class="colour--main">
-          <input type="text" name="search" id="search" placeholder="Search" />
-          <ul class="text-on-main">
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-          </ul>
-        </nav>
-        <div class="nav--bottom colour--dark"></div>
+        <article id="blog">
+          <nav class="colour--main">
+            <input type="text" name="search" id="search" placeholder="Search" />
+            <ul class="text-on-main">
+              <li>Home</li>
+              <li>About</li>
+              <li>Contact</li>
+            </ul>
+          </nav>
+          <div class="nav--bottom colour--accent"></div>
+          <div class="wrapper"></div>
+        </article>
+        <article id="landingPage" class="hidden"></article>
+        <article id="signUp" class="hidden"></article>
+        <article id="pricing" class="hidden"></article>
+        <article id="dashboard" class="hidden"></article>
       </section>
     </div>
   </body>
